Don't send move events for normal mouse tracking

xterm's DECSET 1000 requests justs press and release notifications, so
do not send move events on this mode.

BUG: 302731